src/main/java/ru/test/company/error/dto/ErrorDTO.java
package ru.test.company.error.dto;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class ErrorDTO {

    private int code;

    private String message;
}
